k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: image-classifier

spec:
  replicas: 1

  selector:
    matchLabels:
      app: image-classifier

  template:
    metadata:
      labels:
        app: image-classifier

    spec:
      containers:

        - name: image-classifier

          image: IMAGE_PLACEHOLDER

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: 250m
              memory: 512Mi

            limits:
              cpu: "1"
              memory: 2Gi

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000

            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 20
            periodSeconds: 20
