k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: image-classifier

  labels:
    app: image-classifier

spec:

  type: ClusterIP

  selector:
    app: image-classifier

  ports:

    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
