k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: image-classifier

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx

  rules:
    - host: image-classifier.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: image-classifier

                port:
                  number: 8000
